--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.23.0",
-    "react-toastify": "^10.0.5"
+    "react-social-login-buttons": "^4.1.0",
+    "reactjs-social-login": "^2.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
