--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
-    "reactjs-social-login": "^2.6.3"
+    "reactjs-social-login": "^2.6.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
