--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "currency-list": "^1.0.8",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
