--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
+    "react-phone-number-input": "^3.4.2",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
     "reactjs-social-login": "^2.6.3",
