--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
     "react-phone-number-input": "^3.4.2",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.5",
     "reactjs-social-login": "^2.6.3",
     "zod": "^3.23.8"
   },
