--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
     "currency-codes": "^2.1.0",
     "currency-list": "^1.0.8",
     "currency-symbol-map": "^5.1.0",
+    "google-map-react": "^2.2.1",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
