--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.6.8",
+    "browser-image-compression": "^2.0.2",
+    "compress-base64": "^4.1.0",
     "currency-codes": "^2.1.0",
     "currency-list": "^1.0.8",
     "currency-symbol-map": "^5.1.0",
@@ -22,8 +24,10 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-phone-number-input": "^3.4.2",
+    "react-photo-collage": "^1.0.9",
     "react-router-dom": "^6.23.0",
     "react-social-login-buttons": "^4.1.0",
     "react-spinners": "^0.13.8",
