--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ jspm_packages/
 # dotenv environment variables file
 .env
 .env.test
+prod.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
