--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-grid-carousel": "^1.0.1",
+    "react-helmet": "^6.1.0",
     "react-image-gallery": "^1.3.0",
     "react-loader-spinner": "^6.1.6",
     "react-phone-number-input": "^3.4.2",
